--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -1,4 +1,4 @@
-name: Java CI Pipeline
+name: Java CI with Maven
 
 on:
   push:
@@ -13,14 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
+          cache: maven
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: Run Tests
-        run: mvn test
+      - name: Build + Run Unit + Integration Tests
+        run: mvn -B clean verify
